--- a/Laboratorio 1/Implementacion/EdExt/src/Presentacion/ConsultaCurso.form
+++ b/Laboratorio 1/Implementacion/EdExt/src/Presentacion/ConsultaCurso.form
@@ -317,6 +317,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Info"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane5">
       <AuxValues>
