--- a/Laboratorio 1/Implementacion/EdExt/src/Presentacion/ConsultaUsuario.form
+++ b/Laboratorio 1/Implementacion/EdExt/src/Presentacion/ConsultaUsuario.form
@@ -189,6 +189,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Info"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="447" y="254" width="-1" height="-1"/>
