--- a/Laboratorio 1/Implementacion/EdExt/src/Presentacion/ConsultaPrograma.form
+++ b/Laboratorio 1/Implementacion/EdExt/src/Presentacion/ConsultaPrograma.form
@@ -141,6 +141,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Info"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="351" y="278" width="-1" height="-1"/>
